[package]
name = "rockc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.17"
pest = "2.5.5"
pest_derive = "2.5.5"
peter = "0.2.1"
linked-hash-map = "0.5.6"
